[fix] add warning + link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@ $(window).scroll(function() {
         <img src="web/background-stars.jpg" />
     </div>
     <div id="content">
+
+	<div style="padding:20px;margin:20px auto;background:#ffed37;color:#2a2a2a">
+		This is a demo for chart & Logo. <a href="Logo.pdf" style="color:#0e4962"> Click here to download the PDF reference.</a>
+	</div>
+
         <section id="header">
             <div id="lang"><a href="#"><img src="web/en_flag.png"></a></div>
             <div id="logo"><a href="#"><img src="web/devuan-white-200px.png"></a></div>
