--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@ $(window).scroll(function() {
     <div id="content">
 
 	<div style="padding:20px;margin:20px auto;background:#ffed37;color:#2a2a2a">
-		This is a demo for chart & Logo. <a href="Logo.pdf" style="color:#0e4962"> Click here to download the PDF reference.</a>
+		This is a demo for chart & Logo. 
+		<br />
+		<a href="Logo.pdf" style="color:#0e4962"> Click here to download the PDF reference.</a>
+		<br />
+		<a href="Logo_2ndpass.pdf" style="color:#0e4962"> Click here to download the 2nd Pass PDF reference.</a>
 	</div>
 
         <section id="header">
